2006-09-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcetag.c (gtk_source_tag_set_property):
	Add missing "break", patch by Kouhei Sutou. Bug #357447.

=== gtksourceview 1.8.0 ===

2006-09-04  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.0
	
2006-08-23  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/po.lang: added 
	text/x-gettext-translation-template to the list of mime-types

=== gtksourceview 1.7.2 ===

2006-08-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.ac:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.7.2

2006-08-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: add indent-on-tab property to 
	allow mass indentation: bug #132824.

2006-08-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/fortran.lang: highlight operators. Patch
	by John Spray, bug #153438.

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: fix tab key issues when inserting
	spaces instead of tabs. Bug #343755.

=== gtksourceview 1.7.1 ===

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.ac:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.7.1

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.ac: newer po/LINGUAS stuff.

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview/language-specs/boo.lang: add boo lang.

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview/language-specs/d.lang: add D lang
	file by Martin Szulecki.

2006-06-22  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: fix bug #345252 – Automatic
	indentation does not work with keypad enter.

=== gtksourceview 1.6.1 ===

2006-04-10  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.6.1
